Updated about page

--- a/about.html
+++ b/about.html
@@ -62,15 +62,20 @@
     <div class="grid grid--aside">
       <div><h2 class="color--light h-align"><b>Biography</b></h2></div>
       <div>
-        <p class="font--large rhythm">I am a full-stack designer with 7 years experience in multi-disciplinary design and web development. I’m a professional, personable and passionate individual and proud father of one. Outside of work I’m a die-hard Formula 1 fan, attending Grands Prix whenever possible.</p>
+        <p class="font--large rhythm">I am a digital designer and front-end developer with 11+ years experience crafting websites, apps and eCommerce experiences. I’m a professional, personable and passionate individual and proud father of two. Outside of work I’m a mid-distance runner, and a die-hard Formula 1 fa.</p>
       </div>
     </div>
     <div class="grid grid--aside">
       <div><h2 class="color--light h-align"><b>Experience</b></h2></div>
       <div>
         <div class="rhythm">
+          <span class="color--accent font--large">The One Off</span>
+          <div class="fl--right color--mid">Q3 2017 - Present</div><br>
+          Digital Design Director
+        </div>
+        <div class="rhythm">
           <span class="color--accent font--large">Orbital</span>
-          <div class="fl--right color--mid">Q4 2014 - Present</div><br>
+          <div class="fl--right color--mid">Q4 2014 - Q3 2017</div><br>
           Creative Director
         </div>
         <div class="rhythm">
@@ -97,72 +102,6 @@
           <span class="color--accent font--large">Birmingham Institute of Art and Design</span>
           <div class="fl--right color--mid">2008 - 2011</div><br>
           BA(hons) Visual Communication (1st Class)
-        </div>
-      </div>
-    </div>
-    <div class="grid grid--aside">
-      <div><h2 class="color--light h-align"><b>Technical</b></h2></div>
-      <div>
-        <div class="grid grid--halves">
-          <div>
-            <h3 class="color--accent">Software</h3>
-            <ul class="list--unstyled">
-              <li>Adobe Illustrator CC</li>
-              <li>Adobe InDesign CC</li>
-              <li>Adobe Photoshop CC</li>
-              <li>Adobe XD</li>
-              <li>Sketch</li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="color--accent">Web Languages</h3>
-            <ul class="list--unstyled">
-              <li>CSS3 (Sass/SCSS)</li>
-              <li>HTML5</li>
-              <li>JS (Vanilla &amp; jQuery)</li>
-              <li>MySql/SQLite</li>
-              <li>PHP</li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="color--accent">Web Platforms</h3>
-            <ul class="list--unstyled">
-              <li>Hybrid Apps (Ionic)</li>
-              <li>WordPress</li>
-              <li>WooCommerce</li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="color--accent">Processes</h3>
-            <ul class="list--unstyled">
-              <li>Git (via Terminal)</li>
-              <li>Grunt</li>
-              <li>Kanban</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="grid grid--aside">
-      <div><h2 class="color--light h-align"><b>Setup &amp; Tools</b></h2></div>
-      <div>
-        <div class="grid grid--halves">
-          <div>
-            <h3 class="color--accent">Hardware</h3>
-            <p>I’m an apple user through and through, and hook my Macbook Pro up to a 27" Thunderbolt display while I’m in the office. iPhone 7 and Apple Watch round out my hardware setup.</p>
-          </div>
-          <div>
-            <h3 class="color--accent">Development</h3>
-            <p>My text editor of choice is Github’s <a href="https://atom.io">Atom</a>, and has been since early beta. Panic’s <a href="https://www.panic.com/transmit/">Transmit 4</a> serves as the perfect FTP client, and I serve sites locally using <a href="https://laravel.com/docs/5.4/valet">Laravel Valet</a>.</p>
-          </div>
-          <div>
-            <h3 class="color--accent">Terminal</h3>
-            <p>I use <a href="https://www.iterm2.com">iTerm 2</a> to handle all things terminal, from file management to git and everything in between. I use <a href="https://www.npmjs.com">NPM</a> and <a href="https://gruntjs.com">Grunt</a> to make my web development life easier.</p>
-          </div>
-          <div>
-            <h3 class="color--accent">Design</h3>
-            <p>I’m a long standing user of Adobe Creative Cloud, although I often wish I wasn’t. We're tied-in to Adobe at work right now, so for the time being it’s here to stay.</p>
-          </div>
         </div>
       </div>
     </div>
