--- a/mask.html
+++ b/mask.html
@@ -68,7 +68,7 @@
 <body>
 <main class="">
   <div class="video-container rhythm">
-    <video src="/build/video/mask-test-3.mp4" autoplay muted loop></video>
+    <video src="/build/video/mask-test-3.mp4" autoplay muted loop playsinline></video>
   </div>
   <article class="container rhythm--double">
     <div class="text--center rhythm--half">Try it on:</div>
