--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
     </div>
     <nav class="header__nav">
       <ul class="list--inline">
-        <li><a href="/about.html">About</a></li>
+        <li><a href="/about">About</a></li>
       </ul>
     </nav>
   </div>
@@ -120,7 +120,7 @@
 <footer class="">
   <div class="container color--mid padded">
     &copy; 2021 Jonathan Engstr&ouml;m
-    <a href="/privacy.html" class="fl--right">Privacy</a>
+    <a href="/privacy" class="fl--right">Privacy</a>
   </div>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/4.0.0-rc2/lazysizes.min.js" async></script>
