--- a/mask.html
+++ b/mask.html
@@ -72,12 +72,9 @@
   </div>
   <article class="container rhythm--double">
     <div class="text--center rhythm--half">Try it on:</div>
-    <a class="btn--block rhythm--half" href="https://www.instagram.com/ar/199836112338018/?ch=NWQ4MGNkNTQwNTM3NmE4YzhkY2YwNzlmNTA2NzJhZjc%3D" style="background-color: #f56040; color: #fff !important;">Instagram</a>
-    <a class="btn--block" href="https://www.facebook.com/fbcameraeffects/testit/199836112338018/NWQ4MGNkNTQwNTM3NmE4YzhkY2YwNzlmNTA2NzJhZjc=/" style="background-color: #1877f2; color: #fff !important;">Facebook</a>
+    <a class="btn--block rhythm--half" href="https://www.instagram.com/ar/199836112338018/?ch=NWQ4MGNkNTQwNTM3NmE4YzhkY2YwNzlmNTA2NzJhZjc%3D" target="_blank" style="background-color: #f56040; color: #fff !important;">Instagram</a>
+    <a class="btn--block" href="https://www.facebook.com/fbcameraeffects/testit/199836112338018/NWQ4MGNkNTQwNTM3NmE4YzhkY2YwNzlmNTA2NzJhZjc=/" target="_blank" style="background-color: #1877f2; color: #fff !important;">Facebook</a>
   </article>
 </main>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/4.0.0-rc2/lazysizes.min.js" async></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-<script src="/build/js/global.min.js"></script>
 </body>
 </html>
