--- a/mask.html
+++ b/mask.html
@@ -5,7 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <title>The TOO MetaMask</title>
+  <title>TOO Christmas 2021 | MetaMask</title>
   <meta name="robots" content="noindex">
 
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
@@ -68,11 +68,11 @@
 <body>
 <main class="">
   <div class="video-container rhythm">
-    <video src="/build/video/mask-test-3.mp4" autoplay muted loop playsinline></video>
+    <video src="/build/video/mask-video.mp4" autoplay muted loop playsinline poster="/build/video/mask-video.png"></video>
   </div>
   <article class="container rhythm--double">
     <div class="text--center rhythm--half">Try it on:</div>
-    <a class="btn--block rhythm--half" href="https://www.instagram.com/ar/199836112338018/?ch=NWQ4MGNkNTQwNTM3NmE4YzhkY2YwNzlmNTA2NzJhZjc%3D" target="_blank" style="background-color: #f56040; color: #fff !important;">Instagram</a>
+    <a class="btn--block rhythm--half" href="https://www.instagram.com/ar/199836112338018/?ch=NWQ4MGNkNTQwNTM3NmE4YzhkY2YwNzlmNTA2NzJhZjc%3D" target="_blank" style="background-color: #f56040; color: #fff !important;">Instagram (recommended)</a>
     <a class="btn--block" href="https://www.facebook.com/fbcameraeffects/testit/199836112338018/NWQ4MGNkNTQwNTM3NmE4YzhkY2YwNzlmNTA2NzJhZjc=/" target="_blank" style="background-color: #1877f2; color: #fff !important;">Facebook</a>
   </article>
 </main>
